# dgesscraper

./: .gitignore  Doxyfile  README.md  pyproject.toml  requirements.txt  setup.py
dges-scraper/: database.py  datacollector.py  dgesfilter.py  dgestypes.py  gracefulexit.py  pagescraper.py  requestfactory.py  scraper.py  sitescraper.py
dgesscraper/: __init__.py  database.py  dgesfilter.py  dgestypes.py  filter.py  gracefulexit.py  pagescraper.py  requestfactory.py  sitescraper.py  types.py
