[build-system]
	requires = [ "setuptools", "wheel" ]
	build-backend = "setuptools.build_meta"

[project]
	name = "dgesscraper"
	description = "A web scraper for DGES student data"
	version = "0.1.0"

	authors = [
		{ name = "Voidbert", email = "humbertogilgomes@protonmail.com" },
	]

	readme = "README.md"
	license = { file = "LICENSE" }

	requires-python = ">=3.7" # Detected by vermin

	keywords = [ "dges", "scraper" ]
	classifiers = [
		"Development Status :: 4 - Beta",
		"Environment :: Console",
		"Intended Audience :: Science/Research",
		"License :: OSI Approved :: Apache Software License",
		"Natural Language :: English",
		"Operating System :: Unix", # Due to signal handling
		"Programming Langunage :: Python :: 3",
	]

	dependencies = [
		"requests", "beautifulsoup4", "html5lib", "tqdm"
	]

[project.urls]
	Homepage = "https://github.com/voidbert/dgesscraper"
	Repository = "https://github.com/voidbert/dgesscraper"
	"Bug Tracker" = "https://github.com/voidbert/dgesscraper/issues"

